# deep-speaker

./: .gitignore  LICENSE.txt  README.md  requirements.txt  setup.cfg
src/deepspeaker/configs/: config.py  lstm_gpu.yaml  lstm_local.yaml  wavenet_gpu.yaml  wavenet_local.yaml
src/deepspeaker/data/: dataset.py  preprocess.py  utils.py
src/deepspeaker/models/: loss_functions.py  my_logging.py  networks.py  train_model.py
tests/configs/: test_config.py
tests/data/: test_dataset.py  test_preprocess.py
