[metadata]
name = deepspeaker
version = 0.0.1
description = Deep learning models for speaker emulation
long_description = file: README.md
author = Bryn Louise
author_email = bryn.louise@aalto.fi
url = https://github.com/brynluisi/deep-speaker
license = MIT License
classifiers = Programming Language :: Python :: 3

[options]
python_requires = >=3.8
packages_dir = src
packages = find:
include_package_data = true
install_requires =
    torch
    torchaudio
    torchvision
    torchmetrics
    wandb
    pytorch-lightning
    numpy
    matplotlib
    plotly
    scipy
    tensorboard
    librosa

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    deepspeaker = deepspeaker.cli:main

